[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/venv",
    "/.idea"
]

[project]
name = "runhelper"
version = "0.1.2"
authors = [
    { name = "Ricardo Brancas", email = "ricardo.brancas@tecnico.ulisboa.pt" },
]
description = "A small library to help running and logging the behaviour of research tools"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "ordered-set"
]

[project.urls]
repository = "https://github.com/RicardoBrancas/runhelper"